enumset_test_nightly/tests/compile-fail/variants.stderr
error: Discriminant should not be negative.
 --> tests/compile-fail/variants.rs:5:5
  |
5 |     Variant = -1,
  |     ^^^^^^^^^^^^

error: `#[derive(EnumSetType)]` can only be used on fieldless enums.
  --> tests/compile-fail/variants.rs:10:5
   |
10 |     Variant(u32),
   |     ^^^^^^^^^^^^

error: `repr` is too small to contain the largest discriminant.
  --> tests/compile-fail/variants.rs:16:5
   |
16 |     Variant = 128,
   |     ^^^^^^^^^^^^^

error: `serialize_repr` is too small to contain the largest discriminant.
  --> tests/compile-fail/variants.rs:22:5
   |
22 |     Variant = 8,
   |     ^^^^^^^^^^^

error: `repr` is too small to contain the largest discriminant.
  --> tests/compile-fail/variants.rs:33:5
   |
33 |     Variant = 16,
   |     ^^^^^^^^^^^^

error: Maximum variant bit allowed is `0xFFFFFFBF`.
  --> tests/compile-fail/variants.rs:38:5
   |
38 |     Variant = 0xFFFFFFD0,
   |     ^^^^^^^^^^^^^^^^^^^^
